--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -56,7 +56,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/sk-qyR224fU?start=180&?autoplay=1&mute=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         
         <h2>and this amazing picture of them</h2>
-        <object data="Mamamoo.jpg" width="350" height="600"></object>
+        <img src="Mamamoo.JPG" width="350" height="600">
         
         <!-- start sw-rss-feed code --> 
         <script type="text/javascript"> 
