--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -70,7 +70,7 @@
         <h2>and this amazing picture of them</h2>
         <h5>(Embedding an object tag)</h5>
         <center>
-          <object data="Mamamoo.jpg" width="350" height="600"></object>
+          <object data="Mamamoo.JPG" width="350" height="600"></object>
         </center>
     </body>
 
