--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -47,7 +47,7 @@
     </body>
 
     <body>
-        <h5>(Embedding a audio file)</h5>
+        <h5>(Embedding an audio file)</h5>
         <div style="text-align:center">
           <h3>Click to listen the full song</h3>
           <audio controls>
@@ -59,7 +59,7 @@
         
     <body>
         <h2>Full new MV launched</h2>
-        <h5>(Embedding a YouTube video)</h5>
+        <h5>(Embedding a YouTube video starting at 3 and that is muted initially)</h5>
         <center>
           <h3>Unmute to listen (starting at 3:00)</h3>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/sk-qyR224fU?start=180&?autoplay=1&mute=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -68,7 +68,7 @@
       
     <body>
         <h2>and this amazing picture of them</h2>
-        <h5>(Embedding an object tag)</h5>
+        <h5>(Embedding an object tag to upload a picture)</h5>
         <center>
           <object data="Mamamoo.JPG" width="350" height="600"></object>
         </center>
@@ -119,9 +119,6 @@
 
           </script> 
           <script type="text/javascript" src="http://feed.surfing-waves.com/js/rss-feed.js"></script> 
-          <!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. --> 
-          <div style="color:#ccc;font-size:10px; text-align:right; width:500px;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank" style="color:#ccc;">Surfing Waves</a></div> 
-          <!-- end sw-rss-feed code -->
         </center>
     </body>
 
