--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -123,6 +123,10 @@
     </body>
 
     <body>
+      <div style="text-align:center">
+        <script src="https://rss.bloople.net/?url=http%3A%2F%2Ffetchrss.com%2Frss%2F5f7fb5f799697161d97a23535f7fb5d6193d9f0c2b4d9772.xml&detail=-1&showtitle=false&type=js"></script>    </body>
+      </div>
+    <body>
         <h2>Something about me</h2>
         <h5>(Embedding a Google map)</h5>
         <center>
