--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -78,54 +78,14 @@
         <h2>There's more info here</h2>
         <h5>(Embedding a RSS feed)</h5>
         <center>
-          <!-- start sw-rss-feed code --> 
-          <script type="text/javascript"> 
-          rssfeed_url=new Array();
-          rssfeed_url[0]="http://fetchrss.com/rss/5f7fb5f799697161d97a23535f7fb5d6193d9f0c2b4d9772.xml";  
-          rssfeed_frame_width="500"; 
-          rssfeed_frame_height="350"; 
-          rssfeed_scroll="on"; 
-          rssfeed_scroll_step="6"; 
-          rssfeed_scroll_bar="off"; 
-          rssfeed_target="_blank"; 
-          rssfeed_font_size="12"; 
-          rssfeed_font_face=""; 
-          rssfeed_border="on"; 
-          rssfeed_css_url="https://feed.surfing-waves.com/css/style4.css"; 
-          rssfeed_title="on"; 
-          rssfeed_title_name=""; 
-          rssfeed_title_bgcolor="#3366ff"; 
-          rssfeed_title_color="#fff"; 
-          rssfeed_title_bgimage=""; 
-          rssfeed_footer="off"; 
-          rssfeed_footer_name="rss feed"; 
-          rssfeed_footer_bgcolor="#fff"; 
-          rssfeed_footer_color="#333"; 
-          rssfeed_footer_bgimage=""; 
-          rssfeed_item_title_length="50"; 
-          rssfeed_item_title_color="#666"; 
-          rssfeed_item_bgcolor="#fff"; 
-          rssfeed_item_bgimage=""; 
-          rssfeed_item_border_bottom="on"; 
-          rssfeed_item_source_icon="off"; 
-          rssfeed_item_date="off"; 
-          rssfeed_item_description="on"; 
-          rssfeed_item_description_length="120"; 
-          rssfeed_item_description_color="#666"; 
-          rssfeed_item_description_link_color="#333"; 
-          rssfeed_item_description_tag="off"; 
-          rssfeed_no_items="0"; 
-          rssfeed_cache = "7f14ab4f984d718ea915912da1cc8fff"; 
-
-          </script> 
-          <script type="text/javascript" src="http://feed.surfing-waves.com/js/rss-feed.js"></script> 
+            <div id="widgetmain" style="text-align:left;overflow-y:auto;overflow-x:hidden;width:400px;background-color:#transparent; border:1px solid #333333;">
+            <div id="rsswidget" style="height:500px;">
+            <iframe src="http://us1.rssfeedwidget.com/getrss.php?time=1602285969461&amp;x=http%3A%2F%2Ffetchrss.com%2Frss%2F5f7fb5f799697161d97a23535f7fb5d6193d9f0c2b4d9772.xml&amp;w=400&amp;h=500&amp;bc=333333&amp;bw=1&amp;bgc=transparent&amp;m=20&amp;it=true&amp;t=(default)&amp;tc=333333&amp;ts=15&amp;tb=transparent&amp;il=true&amp;lc=0000FF&amp;ls=14&amp;lb=false&amp;id=true&amp;dc=333333&amp;ds=14&amp;idt=true&amp;dtc=284F2D&amp;dts=12" border="0" hspace="0" vspace="0" frameborder="no" marginwidth="0" marginheight="0" style="border:0; padding:0; margin:0; width:400px; height:500px;" id="rssOutput"></iframe></div>
+            <div style="text-align:right;margin-bottom:0;border-top:1px solid #333333;" id="widgetbottom">
+            <span style="font-size:70%"><a href="http://www.rssfeedwidget.com"></a>&nbsp;</span><br></div></div>
         </center>
     </body>
 
-    <body>
-      <div style="text-align:center">
-        <script src="https://rss.bloople.net/?url=http%3A%2F%2Ffetchrss.com%2Frss%2F5f7fb5f799697161d97a23535f7fb5d6193d9f0c2b4d9772.xml&detail=-1&showtitle=false&type=js"></script>    </body>
-      </div>
     <body>
         <h2>Something about me</h2>
         <h5>(Embedding a Google map)</h5>
