--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -77,13 +77,9 @@
     <body>
         <h2>There's more info here</h2>
         <h5>(Embedding a RSS feed)</h5>
-        <center>
-            <div id="widgetmain" style="text-align:left;overflow-y:auto;overflow-x:hidden;width:400px;background-color:#transparent; border:1px solid #333333;">
-            <div id="rsswidget" style="height:500px;">
-            <iframe src="http://us1.rssfeedwidget.com/getrss.php?time=1602285969461&amp;x=http%3A%2F%2Ffetchrss.com%2Frss%2F5f7fb5f799697161d97a23535f7fb5d6193d9f0c2b4d9772.xml&amp;w=400&amp;h=500&amp;bc=333333&amp;bw=1&amp;bgc=transparent&amp;m=20&amp;it=true&amp;t=(default)&amp;tc=333333&amp;ts=15&amp;tb=transparent&amp;il=true&amp;lc=0000FF&amp;ls=14&amp;lb=false&amp;id=true&amp;dc=333333&amp;ds=14&amp;idt=true&amp;dtc=284F2D&amp;dts=12" border="0" hspace="0" vspace="0" frameborder="no" marginwidth="0" marginheight="0" style="border:0; padding:0; margin:0; width:400px; height:500px;" id="rssOutput"></iframe></div>
-            <div style="text-align:right;margin-bottom:0;border-top:1px solid #333333;" id="widgetbottom">
-            <span style="font-size:70%"><a href="http://www.rssfeedwidget.com"></a>&nbsp;</span><br></div></div>
-        </center>
+          <div style="text-align:center">
+            <script src="https://rss.bloople.net/?url=http%3A%2F%2Ffetchrss.com%2Frss%2F5f7fb5f799697161d97a23535f7fb5d6193d9f0c2b4d9772.xml&detail=150&showtitle=false&type=js"></script>          </div>
+          </div>
     </body>
 
     <body>
